--- a/TODO
+++ b/TODO
@@ -7,7 +7,8 @@
 - add authentication frontend
 - add authentication backend
 - read about & implement database back-up
-- add tailwind & style guide
+- add tailwind & refactor components
+- add eslint rules
 
 
 ## Priority
@@ -16,4 +17,4 @@
 - add forms validation
 - fix MovieBulkAddComponent tests
 - read about & implement database back-up
-- add tailwind & style guide
+- add tailwind & refactor components
